--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactNativeTemplate",
+  "name": "ReactNativeChatClient",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -13,7 +13,7 @@
     "immutable": "^3.8.1",
     "moment": "^2.13.0",
     "react": "^15.1.0",
-    "react-native": "0.27.2",
+    "react-native": "~0.27.2",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
   },
@@ -27,7 +27,7 @@
     "eslint": "^2.12.0",
     "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-react": "^5.1.1",
-    "istanbul": "^1.0.0-alpha.2",
+    "istanbul": "1.0.0-alpha.2",
     "mocha": "^2.5.3",
     "react-addons-test-utils": "^15.1.0",
     "react-native-mock": "^0.2.3",
