--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^15.1.0",
     "react-native": "~0.27.2",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "uuid": "^2.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
