--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "check-coverage": "istanbul check-coverage"
   },
   "dependencies": {
+    "bluebird": "^3.4.0",
     "immutable": "^3.8.1",
     "moment": "^2.13.0",
     "react": "^15.1.0",
     "react-native": "~0.27.2",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
-    "uuid": "^2.0.2"
+    "redux-loop": "^2.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
@@ -32,6 +33,7 @@
     "mocha": "^2.5.3",
     "react-addons-test-utils": "^15.1.0",
     "react-native-mock": "^0.2.3",
+    "rewire": "^2.5.1",
     "rimraf": "^2.5.2"
   }
 }
