--- a/.istanbul.yml
+++ b/.istanbul.yml
@@ -11,19 +11,19 @@ instrumentation:
 reporting:
   print: summary
   reports:
-    - lcov
     - text
     - html
+    - json
   dir: ./coverage
   watermarks:
-    statements: [50, 80]
-    lines: [50, 80]
-    functions: [50, 80]
-    branches: [50, 80]
+    statements: [85, 90]
+    lines: [85, 90]
+    functions: [85, 90]
+    branches: [85, 90]
   report-config:
     clover: {file: clover.xml}
     cobertura: {file: cobertura-coverage.xml}
-    json: {file: coverage-final.json}
+    json: {file: coverage.json}
     json-summary: {file: coverage-summary.json}
     lcovonly: {file: lcov.info}
     teamcity: {file: null, blockName: Code Coverage Summary}
@@ -32,14 +32,15 @@ reporting:
     text-summary: {file: null}
 check:
   global:
-    statements: 50
-    lines: 50
-    branches: 50
-    functions: 50
+    statements: 80
+    lines: 80
+    branches: 80
+    functions: 80
     excludes: []
-  each:
-    statements: 50
-    lines: 50
-    branches: 50
-    functions: 50
-    excludes: []
+#
+#  each:
+#    statements: 50
+#    lines: 50
+#    branches: 50
+#    functions: 50
+#    excludes: []
