--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha",
     "lint": "eslint src test",
     "coverage": "rimraf coverage && istanbul cover --i=src/**/*.js _mocha",
-    "check-coverage": "istanbul check-coverage"
+    "check-coverage": "istanbul check-coverage coverage/coverage.json"
   },
   "dependencies": {
     "bluebird": "^3.4.0",
@@ -15,6 +15,7 @@
     "moment": "^2.13.0",
     "react": "^15.1.0",
     "react-native": "~0.27.2",
+    "react-native-gifted-spinner": "0.0.4",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-loop": "^2.1.1"
