--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "~0.27.2",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
     "redux-loop": "^2.1.1"
   },
   "devDependencies": {
