--- a/.istanbul.yml
+++ b/.istanbul.yml
@@ -6,8 +6,8 @@ instrumentation:
   default-excludes: true
   excludes:
     - node_modules
-    - src/redux/logger.js
-    - src/redux/mockServer.js
+    - src/store/*.js
+    - src/state/mockServer.js
   include-all-sources: true
   es-modules: true
 reporting:
