--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "moment": "^2.13.0",
     "react": "^15.1.0",
     "react-native": "~0.27.2",
+    "react-native-gifted-spinner": "0.0.4",
+    "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-loop": "^2.1.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.10.1",
     "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-react-native": "^1.9.0",
+    "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "eslint": "^2.12.0",
     "eslint-plugin-babel": "^3.2.0",
