--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.13.0",
     "react": "^15.1.0",
     "react-native": "~0.27.2",
+    "react-native-dismiss-keyboard": "^1.0.0",
     "react-native-gifted-spinner": "0.0.4",
     "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.5",
